# PythonProject

./: .env.template  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
src/: decorators.py  external_api.py  file_reader.py  flake8  generators.py  logging_config.py  main.py  masks.py  masks1.py  processing.py  utils.py  widget.py
src/file_parsers/: csv_parser.py  excel_parser.py
src/operations/: search.py  stats.py
src/tests/: test_widget.py
tests/: test.decorators.py  test_csv_parser.py  test_excel_parser.py  test_external_api.py  test_file_reader.py  test_generators.py  test_masks.py  test_processing.py  test_search.py  test_stats.py  test_widget.py
